# openGL_template

./: .gitignore  CMakeLists.txt  README.md  glad.c  main.cpp
include/glad/: glad.h
src/: main.cpp
src/shader/: shader.cpp  shader.h
